tests/NormalTests/paczka1/fuzzy1/89752314.err
Error in line 1: rBJ4 A464 66,1
Error in line 6: ijrhNwJo S265 53,9
Error in line 3: x2PgVh A464 32,2
Error in line 21: x2PgVh S801 468,60
Error in line 7: rBJ4 S801 55,7
Error in line 12: x2PgVh S801 95,9
Error in line 25: x2PgVh S265 78,8
Error in line 27: x2PgVh A464 72,8
Error in line 26: A464 S219 45,8
Error in line 28: x2PgVh S265 53,1
Error in line 29: A464 A464 13,3
Error in line 30: x2PgVh S219 33,4
